# demos

./: LICENSE  Makefile  README.md  docker-compose.yml  env.example  justfile  start.sh
fastapi/: server.py
featuremeshd/: config.yaml
jupyter/: Dockerfile  pyproject.toml
jupyter/libs/: __init__.py
jupyter/libs/api/: server.py
jupyter/libs/helpers/: __init__.py  utils.py  utils_db.py  utils_notebook.py
jupyter/libs/mcp/: server.py
jupyter/notebooks/demos/business_cases/: _load_tpch_into_duckdb.ipynb  analytics_with_bigquery.ipynb  segmentation_1_offline.ipynb  segmentation_2_online.ipynb
jupyter/notebooks/demos/capabilities/: access_management.ipynb  execute_on_4_target_databases.ipynb  online_federated_queries.ipynb  readme_example.ipynb
trino/conf/: node.properties
